refactor: key generator improvements (#33)
* fix: minor cleanup & formatting

* fix: remove useless super() calls