@@ -32,14 +32,13 @@ public class IdentificationKeyGenerator {
     // the Identification Key
     private SingleAccessKeyTree singleAccessKeyTree = null;
     // the knowledge base
-    private DataSet dataset;
+    private final DataSet dataset;
     // the config object (containing options)
-    private IkeyConfig config;
+    private final IkeyConfig config;
     // the maximum number of states per character
     private int maxNbStatesPerCharacter;
 
     public IdentificationKeyGenerator(final DataSet dataset, final IkeyConfig config) {
-        super();
         this.dataset = dataset;
         this.config = config;
     }
@@ -59,7 +58,7 @@ public class IdentificationKeyGenerator {
 
         // calculate next node
         calculateSingleAccessKeyNodeChild(rootNode, dataset.getCharacters(),
-                new ArrayList<>(dataset.getTaxa()), new ArrayList<ICharacter>());
+                new ArrayList<>(dataset.getTaxa()), new ArrayList<>());
 
         // delete useless nodes
         boolean isOptimized = true;
@@ -68,9 +67,12 @@ public class IdentificationKeyGenerator {
         }
     }
 
-    private void calculateSingleAccessKeyNodeChild(final SingleAccessKeyNode parentNode,
-                                                   final List<ICharacter> remainingCharacters, final List<Taxon> remainingTaxa,
-                                                   final List<ICharacter> alreadyUsedCharacter) throws Exception {
+    private void calculateSingleAccessKeyNodeChild(
+            final SingleAccessKeyNode parentNode,
+            final List<ICharacter> remainingCharacters,
+            final List<Taxon> remainingTaxa,
+            final List<ICharacter> alreadyUsedCharacter
+    ) throws Exception {
 
         if (!remainingCharacters.isEmpty() && remainingTaxa.size() > 1) {
 
@@ -242,8 +244,10 @@ public class IdentificationKeyGenerator {
         }
     }
 
-    private boolean mergeNodesIfSameDiscrimination(final List<SingleAccessKeyNode> futureChildNodes,
-                                                   final SingleAccessKeyNode node) {
+    private boolean mergeNodesIfSameDiscrimination(
+            final List<SingleAccessKeyNode> futureChildNodes,
+            final SingleAccessKeyNode node
+    ) {
 
         for (final SingleAccessKeyNode futureChildNode : futureChildNodes) {
             if (node.getRemainingTaxa().size() > 1
@@ -258,8 +262,11 @@ public class IdentificationKeyGenerator {
         return false;
     }
 
-    public boolean optimizeSingleAccessKeyTree(final SingleAccessKeyNode parentNode, final SingleAccessKeyNode node,
-                                               boolean isOptimized) {
+    public boolean optimizeSingleAccessKeyTree(
+            final SingleAccessKeyNode parentNode,
+            final SingleAccessKeyNode node,
+            boolean isOptimized
+    ) {
 
         if (node != null) {
             if (parentNode != null
@@ -296,8 +303,11 @@ public class IdentificationKeyGenerator {
         return newRemainingTaxa;
     }
 
-    private List<Taxon> getRemainingTaxa(final List<Taxon> remainingTaxa, final QuantitativeCharacter character,
-                                         final QuantitativeMeasure quantitativeMeasure) {
+    private List<Taxon> getRemainingTaxa(
+            final List<Taxon> remainingTaxa,
+            final QuantitativeCharacter character,
+            final QuantitativeMeasure quantitativeMeasure
+    ) {
 
         final List<Taxon> newRemainingTaxa = new ArrayList<>();
 
@@ -341,8 +351,10 @@ public class IdentificationKeyGenerator {
         return notDescribedTaxa;
     }
 
-    private List<QuantitativeMeasure> splitQuantitativeCharacter(final QuantitativeCharacter character,
-                                                                 final List<Taxon> remainingTaxa) throws Exception {
+    private List<QuantitativeMeasure> splitQuantitativeCharacter(
+            final QuantitativeCharacter character,
+            final List<Taxon> remainingTaxa
+    ) throws Exception {
 
         final List<QuantitativeMeasure> quantitativeMeasures = new ArrayList<>();
         final QuantitativeMeasure quantitativeMeasure1 = new QuantitativeMeasure();
@@ -350,12 +362,7 @@ public class IdentificationKeyGenerator {
 
         // get the Min and Max values of all remaining taxa
         final List<Double> allValues = getAllNumericalValues(character, remainingTaxa);
-        Collections.sort(allValues, new Comparator<Double>() {
-            @Override
-            public int compare(final Double val1, final Double val2) {
-                return Double.compare(val1, val2);
-            }
-        });
+        allValues.sort(Double::compare);
         // determine the best threshold to cut the interval in 2 part
         Double threshold;
         Double bestThreshold = null;
@@ -421,8 +428,12 @@ public class IdentificationKeyGenerator {
         return allValues;
     }
 
-    private Map<ICharacter, Float> charactersScores(final List<ICharacter> characters, final List<Taxon> remaningTaxa,
-                                                    final List<ICharacter> childDependantCharacters, final List<ICharacter> alreadyUsedCharacter)
+    private Map<ICharacter, Float> charactersScores(
+            final List<ICharacter> characters,
+            final List<Taxon> remaningTaxa,
+            final List<ICharacter> childDependantCharacters,
+            final List<ICharacter> alreadyUsedCharacter
+    )
             throws Exception {
         final HashMap<ICharacter, Float> scoreMap = new LinkedHashMap<>();
         for (final ICharacter character : characters) {
@@ -443,12 +454,15 @@ public class IdentificationKeyGenerator {
         return scoreMap;
     }
 
-    private void considerChildCharacterScore(final HashMap<ICharacter, Float> scoreMap,
-                                             final List<ICharacter> childDependantCharacters) throws Exception {
-        for (final ICharacter character : scoreMap.keySet()) {
+    private void considerChildCharacterScore(
+            final HashMap<ICharacter, Float> scoreMap,
+            final List<ICharacter> childDependantCharacters
+    ) {
+        for (final Map.Entry<ICharacter, Float> entry : scoreMap.entrySet()) {
+            final ICharacter character = entry.getKey();
             if (character.isSupportsCategoricalData() && !character.getChildCharacters().isEmpty()) {
                 final float max = getMaxChildScore(scoreMap, character);
-                if (scoreMap.get(character) < max) {
+                if (entry.getValue() < max) {
                     scoreMap.put(character, max);
                     childDependantCharacters.add(character);
                 }
@@ -494,7 +508,8 @@ public class IdentificationKeyGenerator {
         if (config.getWeightType() == IkeyConfig.WeightType.CONTEXTUAL) {
             float bestWeight = -1;
 
-            for (final ICharacter character : charactersScore.keySet()) {
+            for (final Map.Entry<ICharacter, Float> entry : charactersScore.entrySet()) {
+                final ICharacter character = entry.getKey();
 
                 if (charactersScore.containsKey(character)) {
                     int nWeights = 0;
@@ -519,9 +534,9 @@ public class IdentificationKeyGenerator {
                     if (averageWeight > bestWeight) {
                         bestCharacter = character;
                         bestWeight = averageWeight;
-                        bestScore = charactersScore.get(character);
-                    } else if (averageWeight == bestWeight && charactersScore.get(character) >= bestScore) {
-                        bestScore = charactersScore.get(character);
+                        bestScore = entry.getValue();
+                    } else if (averageWeight == bestWeight && entry.getValue() >= bestScore) {
+                        bestScore = entry.getValue();
                         bestCharacter = character;
                     }
                 }
@@ -535,19 +550,20 @@ public class IdentificationKeyGenerator {
                 int lessTaxaNumber = getTaxaNumberForAllStates((CategoricalCharacter) bestCharacter,
                         remainingTaxa);
 
-                for (final ICharacter character : charactersScore.keySet()) {
+                for (final Map.Entry<ICharacter, Float> entry : charactersScore.entrySet()) {
+                    final ICharacter character = entry.getKey();
                     for (final Taxon taxon : remainingTaxa) {
                         final CodedDescription currentCodedDescription = dataset.getCodedDescription(taxon);
                         if (currentCodedDescription.getCharacterWeight(character) != null
                                 && currentCodedDescription.getCharacterWeight(character) == bestWeight
-                                && charactersScore.get(character) == bestScore
+                                && entry.getValue() == bestScore
                                 && character.isSupportsCategoricalData()) {
                             // get the number of taxa of all child nodes of the current CategoricalCharacter
                             final int currentTaxaNumber = getTaxaNumberForAllStates(
                                     (CategoricalCharacter) character, remainingTaxa);
                             // if the current taxa number is lower than the less taxa number
                             if (currentTaxaNumber < lessTaxaNumber) {
-                                bestScore = charactersScore.get(character);
+                                bestScore = entry.getValue();
                                 bestCharacter = character;
                                 lessTaxaNumber = currentTaxaNumber;
                             }
@@ -560,18 +576,19 @@ public class IdentificationKeyGenerator {
         } else {
 
             float bestWeight = -1;
-            for (final ICharacter character : charactersScore.keySet()) {
+            for (final Map.Entry<ICharacter, Float> entry : charactersScore.entrySet()) {
+                final ICharacter character = entry.getKey();
 
                 // if the current character weight is better than the bestWeight
                 if (character.getWeight() > bestWeight) {
                     bestCharacter = character;
                     bestWeight = character.getWeight();
-                    bestScore = charactersScore.get(character);
+                    bestScore = entry.getValue();
                     // if the current character weight is equal to the bestWeight and the current character
                     // score
                     // is better than the best score
-                } else if (character.getWeight() == bestWeight && charactersScore.get(character) >= bestScore) {
-                    bestScore = charactersScore.get(character);
+                } else if (character.getWeight() == bestWeight && entry.getValue() >= bestScore) {
+                    bestScore = entry.getValue();
                     bestCharacter = character;
                 }
 
@@ -583,15 +600,16 @@ public class IdentificationKeyGenerator {
             if (charactersScore.containsValue(bestScore) && bestCharacter.isSupportsCategoricalData()) {
                 int lessTaxaNumber = getTaxaNumberForAllStates((CategoricalCharacter) bestCharacter,
                         remainingTaxa);
-                for (final ICharacter character : charactersScore.keySet()) {
-                    if (character.getWeight() == bestWeight && charactersScore.get(character) == bestScore
+                for (final Map.Entry<ICharacter, Float> entry : charactersScore.entrySet()) {
+                    final ICharacter character = entry.getKey();
+                    if (character.getWeight() == bestWeight && entry.getValue() == bestScore
                             && character.isSupportsCategoricalData()) {
                         // get the number of taxa of all child nodes of the current CategoricalCharacter
                         final int currentTaxaNumber = getTaxaNumberForAllStates((CategoricalCharacter) character,
                                 remainingTaxa);
                         // if the current taxa number is lower than the less taxa number
                         if (currentTaxaNumber < lessTaxaNumber) {
-                            bestScore = charactersScore.get(character);
+                            bestScore = entry.getValue();
                             bestCharacter = character;
                             lessTaxaNumber = currentTaxaNumber;
                         }
@@ -704,8 +722,11 @@ public class IdentificationKeyGenerator {
         return score;
     }
 
-    private float quantitativeCharacterScore(final QuantitativeCharacter character, final List<Taxon> remainingTaxa,
-                                             final List<ICharacter> alreadyUsedCharacter) throws Exception {
+    private float quantitativeCharacterScore(
+            final QuantitativeCharacter character,
+            final List<Taxon> remainingTaxa,
+            final List<ICharacter> alreadyUsedCharacter
+    ) throws Exception {
         int cpt = 0;
         float score = 0;
         boolean isAlwaysDescribed = true;
@@ -802,7 +823,7 @@ public class IdentificationKeyGenerator {
         return score;
     }
 
-    public static float calculCommonPercentage(final double min1, final double max1, final double min2, final double max2) {
+    public static float calculateCommonPercentage(final double min1, final double max1, final double min2, final double max2) {
         final double minLowerTmp;
         final double maxUpperTmp;
         final double minUpperTmp;
@@ -825,7 +846,7 @@ public class IdentificationKeyGenerator {
             maxLowerTmp = max1;
         }
 
-        res = new Double((maxLowerTmp - minUpperTmp) / (maxUpperTmp - minLowerTmp)).floatValue();
+        res = Double.valueOf((maxLowerTmp - minUpperTmp) / (maxUpperTmp - minLowerTmp)).floatValue();
 
         if (res < 0) {
             res = 0;
